5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1636_2728.log
== SUBMITION (2019-05-17 08:21:03) 
-- CODE:
p=float(input("percurso em km:"))
t=float(input("tipo de carro A/B:"))
if (A.upper()=t) :
	l=p/8
	print(round(l,2))
else :
	l2=p/12
	print(round(l2,2))
-- EXECUTION TIME:
0.188565
-- ERROR:
  File "/home/codebench/codes/1636/2728/main.py", line 3
    if (A.upper()=t) :
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:21:09) 
-- CODE:
p=float(input("percurso em km:"))
t=float(input("tipo de carro A/B:"))
if (A.upper()=t) :
	l=p/8
	print(round(l,2))
else :
	l2=p/12
	print(round(l2,2))
-- ERROR:
File "XXXX", line 3
    if (A.upper()=t) :
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:21:23) 
-- CODE:
p=float(input("percurso em km:"))
t=float(input("tipo de carro A/B:"))
if (t.upper()=A) :
	l=p/8
	print(round(l,2))
else :
	l2=p/12
	print(round(l2,2))
-- ERROR:
File "XXXX", line 3
    if (t.upper()=A) :
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:21:39) 
-- CODE:
p=float(input("percurso em km:"))
t=float(input("tipo de carro A/B:"))
if (t=A) :
	l=p/8
	print(round(l,2))
else :
	l2=p/12
	print(round(l2,2))
-- ERROR:
File "XXXX", line 3
    if (t=A) :
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:21:49) 
-- CODE:
p=float(input("percurso em km:"))
t=float(input("tipo de carro A/B:"))
if (t==A) :
	l=p/8
	print(round(l,2))
else :
	l2=p/12
	print(round(l2,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t=float(input())
ValueError: could not convert string to float: 'B'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:22:12) 
-- CODE:
p=float(input("percurso em km:"))
t=(input("tipo de carro A/B:")
if (t.upper()==A) :
	l=p/8
	print(round(l,2))
else :
	l2=p/12
	print(round(l2,2))
-- ERROR:
File "XXXX", line 3
    if (t.upper()==A) :
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:22:24) 
-- CODE:
p=float(input("percurso em km:"))
t=(input("tipo de carro A/B:")
if (t==A) :
	l=p/8
	print(round(l,2))
else :
	l2=p/12
	print(round(l2,2))
-- ERROR:
File "XXXX", line 3
    if (t==A) :
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:22:58) 
-- CODE:
p=float(input("percurso em km:"))
t=(input("tipo de carro A/B:")
if (t.upper()=="A"):
	l=p/8
	print(round(l,2))
else :
	l2=p/12
	print(round(l2,2))
-- ERROR:
File "XXXX", line 3
    if (t.upper()=="A"):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:23:06) 
-- CODE:
p=float(input("percurso em km:"))
t=(input("tipo de carro A/B:")
if (t=="A"):
	l=p/8
	print(round(l,2))
else :
	l2=p/12
	print(round(l2,2))
-- ERROR:
File "XXXX", line 3
    if (t=="A"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:23:15) 
-- CODE:
p=float(input("percurso em km:"))
t=input("tipo de carro A/B:")
if (t="A"):
	l=p/8
	print(round(l,2))
else :
	l2=p/12
	print(round(l2,2))
-- ERROR:
File "XXXX", line 3
    if (t="A"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:23:20) 
-- CODE:
p=float(input("percurso em km:"))
t=input("tipo de carro A/B:")
if (t=="A"):
	l=p/8
	print(round(l,2))
else :
	l2=p/12
	print(round(l2,2))
-- OUTPUT:
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:23:36) 
-- CODE:
p=float(input("percurso em km:"))
t=input("tipo de carro A/B:")
if (t.upper()=="A"):
	l=p/8
	print(round(l,2))
else :
	l2=p/12
	print(round(l2,2))
-- OUTPUT:
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 08:23:44) 
-- CODE:
p=float(input("percurso em km:"))
t=input("tipo de carro A/B:")
if (t.upper()=="A"):
	l=p/8
	print(round(l,2))
else :
	l2=p/12
	print(round(l2,2))
-- EXECUTION TIME:
0.137452
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
